--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,15 @@
             <artifactId>h2</artifactId>
             <version>2.2.220</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
